# greenws

./: .gitignore  .readthedocs.yaml  Makefile  README.rst  pyproject.toml
docs/: Makefile  api.rst  conf.py  index.rst  requirements.txt
examples/: echo_wsgi.py
src/: greenws.py
