[project]
name = "greenws"
authors = [{name = "Auri", email = "me@aurieh.me"}]
readme = "README.rst"
dependencies = ["gevent", "wsproto ~= 1.0.0"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.7"
dynamic = ["version", "description"]

[project.urls]
documentation = "https://greenws.rtfd.io"
repository = "https://github.com/quasar-media/python-greenws"

[tool.flit.module]
name = "greenws"

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"
